Добавлена папка schema_design

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,17 @@
 [flake8]
 per-file-ignores =
   test_*.py: S101,DAR101,D100
+ignore =
+    WPS316,
+    WPS323,
+    WPS110,
+    WPS110,
+    S311,
+    WPS317,
+    WPS318,
+    WPS319,
+    WPS319,
+    WPS323,
+    D208,
+    D209,
+    D414
