Добавлена папка movies_admin

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,4 +14,43 @@ ignore =
     WPS323,
     D208,
     D209,
-    D414
+    D414,
+    D100,
+    WPS226,
+    E501,
+    WPS432,
+    WPS221,
+    D101,
+    D105,
+    D101,
+    D104,
+    I001,
+    I003,
+    WPS407,
+    Q000,
+    E131,
+    C812,
+    WPS433,
+    WPS336,
+    W292,
+    WPS411,
+    I005,
+    D106,
+    WPS306,
+    D105,
+    WPS431,
+    D102,
+    DAR401,
+    WPS326,
+    D400,
+    RST203,
+    RST301,
+    RST201,
+    WPS300,
+    WPS420,
+    WPS604,
+    C819,
+    WPS102,
+    WPS301,
+    WPS458
+
